# basic-python-mcp-tutorial

./: README.md  langchain_mcp_client.py  main.py  notes.txt  pyproject.toml
client/: langchain_mcp_client.py
server/: .dockerignore  Dockerfile
