[project]
name = "basic-python-mcp-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.6.0", "requests>=2.31.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.36.3",
    "uvicorn>=0.27.1",
    "fastapi>=0.110.0"
]
